--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   To the wedding of
 </h3>
 
+<h2 id="james">
+  Mr. James Anderson
+</h2>
+<h2 id="and">
+  &amp;
+</h2>
+<h2 id="melanie">
+  Ms. Melanie Williams
+</h2>
+
 <style>
   .toolbar {
     background-color: #4898c8;
@@ -66,6 +76,26 @@
     justify-content: center;
     align-items: center;
     font-family: 'Snell Roundhand', cursive;
+    margin-bottom: 100px;
   }
+  #james {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Snell Roundhand', cursive;
+  }
+  #and {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Snell Roundhand', cursive;
+  }
+  #melanie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Snell Roundhand', cursive;
+  }
+  
   
 </style>
