--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </ul>
 </div>
 
+<div id="couplephotos">
+<img src="filename.jpg" alt="couple photo 1">
+<img src="filename.jpg" alt="description of image">
+</div>
+
 <h3 id="invite">
   You are cordially invited
 </h3>
