--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </div>
 
 <div id="couplephotos">
-<img src="filename.jpg" alt="couple photo 1">
-<img src="filename.jpg" alt="description of image">
+<img id="couplepic1" src="https://i.pinimg.com/564x/d6/ad/50/d6ad501520ccc52493b448ed86e71f01.jpg" alt="couple photo 1">
+<img id="couplepic2" src="https://i.pinimg.com/564x/76/9a/8f/769a8faeca942df42989f51219e6f0be.jpg" alt="description of image">
+<img id="couplepic3" src="https://i.pinimg.com/564x/07/5c/c0/075cc050d911ebc6ff4880b075bcc44c.jpg" alt="couple photo 3">
 </div>
 
 <h3 id="invite">
@@ -100,6 +101,15 @@
     justify-content: center;
     align-items: center;
     font-family: 'Snell Roundhand', cursive;
+  }
+  #couplepic1 {
+    height: 400px;
+  }
+  #couplepic2 {
+    height: 400px;
+  }
+  #couplepic3 {
+    height: 400px
   }
   
   
