--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <div id="couplephotos">
 <img id="couplepic1" src="noeye.png" alt="couple photo 1" onclick="switchpic1()">
-<img id="couplepic2" src="noeye.png" alt="description of image">
-<img id="couplepic3" src="noeye.png" alt="couple photo 3">
+<img id="couplepic2" src="noeye.png" alt="description of image" onclick="switchpic2()">
+<img id="couplepic3" src="noeye.png" alt="couple photo 3" onclick="switchpic3()">
 </div>
 
 <h3 id="invite">
