resized images again

--- a/index.html
+++ b/index.html
@@ -101,17 +101,18 @@
     justify-content: center;
     align-items: center;
     font-family: 'Snell Roundhand', cursive;
+    margin-bottom: 200px;
   }
   #couplepic1 {
-    height: 600px;
+    height: 650px;
     cursor: pointer;
   }
   #couplepic2 {
-    height: 600px;
+    height: 650px;
     cursor: pointer;
   }
   #couplepic3 {
-    height: 600px;
+    height: 650px;
     cursor: pointer;
   }
   
