--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
     margin-bottom: 200px;
   }
   #couplepic1 {
-    height: 640px;
+    height: 564px;
     cursor: pointer;
+    margin-left: 70px;
   }
   #couplepic2 {
-    height: 640px;
+    height: 564px;
     cursor: pointer;
   }
   #couplepic3 {
-    height: 640px;
+    height: 564px;
     cursor: pointer;
   }
   
